# wizard_fun_run

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: main.yml
asset_source/: fireball.aseprite  grassy_tiles.aseprite  greenseer.aseprite  menu_entry.aseprite
assets/: character.json  fireball.json  spritesheet_config.json
assets/levels/: level1.json
inc/: asset_manager.h  body.h  box.h  conversion.h  core.h  fonts.h  json11_from_file.h  level_tiles.h  log.h  physics.h  play_level_core.h  player.h  rectangle_collision.h  scene.h  texture_container.h  texture_paths.h
libs/: CMakeLists.txt
libs/gameloop/: CMakeLists.txt
libs/gameloop/inc/: core.h
libs/gameloop/src/: core.cpp
libs/log/: CMakeLists.txt
libs/log/inc/: log.h
libs/platformerutils/inc/: body.h  box.h  rectangle_collision.h  vector2.h
libs/platformerutils/src/: rectangle_collision.cpp
libs/tetris/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/inc/: conversion.h
libs/wizard_fun_run/: CMakeLists.txt
libs/wizard_fun_run/exported_inc/: wizard_fun_run.h
libs/wizard_fun_run/inc/: asset_manager.h  physics.h  play_level_core.h  player.h  states.h
libs/wizard_fun_run/io/: CMakeLists.txt
libs/wizard_fun_run/src/: level_editor.cpp  menu.cpp  physics.cpp  play_level_core.cpp  play_level_draw.cpp  play_level_update.cpp
libs/wizard_fun_run_sfml/: CMakeLists.txt
libs/wizard_fun_run_sfml/inc/: play_level_core.h  scene.h
libs/wizard_fun_run_sfml/src/: scene.cpp
src/: asset_manager.cpp  core.cpp  fonts.cpp  json11_from_file.cpp  level_editor.cpp  main.cpp  menu.cpp  physics.cpp  play_level_core.cpp  play_level_draw.cpp  play_level_handle_input.cpp  play_level_update.cpp  texture_container.cpp
tests/: tests_main.cpp
todos/: abstract_away_sfml
